<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/line_icon" />

    <SeekBar
        android:id="@+id/widthSeekBar"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50" />

    <Button
        android:id="@+id/widthDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickLineWidthButton"
        android:text="@string/set_width" />
</LinearLayout>