<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/color"
        android:icon="@drawable/color_icon"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/erase"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/lineWidth"
        android:icon="@drawable/line_icon"
        android:title="@string/lineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/bluetoothConnect"
        android:title="@string/connect" />
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/Save" />
    <item
        android:id="@+id/load"
        android:title="@string/load" />
    <item
        android:id="@+id/clear"
        android:title="@string/clear" />
</menu>